# pdfserve

./: .dockerignore  .pylintrc  .pyre_configuration  Dockerfile  Makefile  README.md  config.yaml  curl.sh  pyproject.toml
kustomize/: Makefile  kustomization.yaml
kustomize/manifests/: deploy.yaml  ingress.yaml  service-monitor.yaml  svc.yaml
kustomize/manifests/configs/: config.yaml  env.conf
pdfserve/: config.py  init.py  logutils.py  models.py  pdf.py  pdf_utils.py  putils.py  version.py
pdfserve/client/: base.py  filedl.py
pdfserve/cmd/: default_config.py  main.py  merge.py  server.py  stamp.py  version.py
pdfserve/server/: server.py  utils.py
pdfserve/server/api/: __init__.py  debug.py  info.py  ocr.py  pdf.py
pdfserve/server/middlewares/: process_time.py  token.py
tests/: conftest.py  test_apiserver.py  test_config.py  test_pdf_utils.py
tests/data/: config-2.yaml  test.sh  test_config-2.yaml  test_config.yaml
